--- a/source/index.html
+++ b/source/index.html
@@ -2867,6 +2867,10 @@ net.brehaut.ClojureTools = (function (SH) {
 })(SyntaxHighlighter);
 </script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="http://www.marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.1.0-SNAPSHOT</h2><br /><p>Personal website of Marc-André Goyette (http://marcandregoyette.com).</p>
 </div><div class="dependencies"><h3>dependencies</h3><table><tr><td class="dep-name">org.clojure/clojure</td><td class="dotted"><hr /></td><td class="dep-version">1.7.0-alpha4</td></tr><tr><td class="dep-name">org.clojure/data.xml</td><td class="dotted"><hr /></td><td class="dep-version">0.0.8</td></tr><tr><td class="dep-name">clj-time</td><td class="dotted"><hr /></td><td class="dep-version">0.8.0</td></tr><tr><td class="dep-name">clygments</td><td class="dotted"><hr /></td><td class="dep-version">0.1.1</td></tr><tr><td class="dep-name">enlive</td><td class="dotted"><hr /></td><td class="dep-version">1.1.5</td></tr><tr><td class="dep-name">garden</td><td class="dotted"><hr /></td><td class="dep-version">1.2.5</td></tr><tr><td class="dep-name">hiccup</td><td class="dotted"><hr /></td><td class="dep-version">1.0.5</td></tr><tr><td class="dep-name">me.raynes/cegdown</td><td class="dotted"><hr /></td><td class="dep-version">0.1.1</td></tr><tr><td class="dep-name">me.raynes/fs</td><td class="dotted"><hr /></td><td class="dep-version">1.4.6</td></tr><tr><td class="dep-name">ring</td><td class="dotted"><hr /></td><td class="dep-version">1.3.2</td></tr><tr><td class="dep-name">stasis</td><td class="dotted"><hr /></td><td class="dep-version">2.2.2</td></tr></table></div></td><td class="codes" style="text-align: center; vertical-align: middle;color: #666;padding-right:20px"><br /><br /><br />(this space intentionally left almost blank)</td></tr><tr><td class="docs"><div class="toc"><a name="toc"><h3>namespaces</h3></a><ul><li><a href="#marcandregoyette.core">marcandregoyette.core</a></li><li><a href="#marcandregoyette.custom-styles">marcandregoyette.custom-styles</a></li><li><a href="#marcandregoyette.feed">marcandregoyette.feed</a></li><li><a href="#marcandregoyette.highlight">marcandregoyette.highlight</a></li><li><a href="#marcandregoyette.page-layout">marcandregoyette.page-layout</a></li><li><a href="#marcandregoyette.pages">marcandregoyette.pages</a></li><li><a href="#marcandregoyette.post-layout">marcandregoyette.post-layout</a></li><li><a href="#marcandregoyette.posts">marcandregoyette.posts</a></li><li><a href="#marcandregoyette.templates">marcandregoyette.templates</a></li><li><a href="#marcandregoyette.urls">marcandregoyette.urls</a></li></ul></div></td><td class="codes">&nbsp;</td></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.core" name="marcandregoyette.core"><h1 class="project-name">marcandregoyette.core</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs"><h2>A static site generated with Stasis</h2>
+
+<p>This is the annotated source code of marcandregoyette.com.</p>
+
+<p>The GitHub repository is https://github.com/magoyette/marcandregoyette.com.</p>
 </td><td class="codes"><pre class="brush: clojure">(ns marcandregoyette.core
   (:require [marcandregoyette.pages :refer [load-pages]]
             [me.raynes.fs :as fs]
@@ -2937,6 +2941,7 @@ net.brehaut.ClojureTools = (function (SH) {
 </td><td class="codes"><pre class="brush: clojure">(def footer
   [:.footer {:font-family &quot;Verdana&quot;
              :font-size (px 12)
+             :padding-top (em 1)
              :max-width content-max-width}])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(def css-lines
   [body
@@ -3071,6 +3076,7 @@ so no conversions are needed.</p>
 </td><td class="codes"><pre class="brush: clojure">(def menu-items
   [{:name &quot;Programming&quot; :link &quot;/categories/programming&quot;}
    {:name &quot;Programmation&quot; :link &quot;/categories/programmation&quot;}
+   {:name &quot;Source code&quot; :link &quot;/source&quot;}
    {:name &quot;About&quot; :link &quot;/about&quot;}
    {:name &quot;À propos&quot; :link &quot;/apropos&quot;}
    {:icon [:i.rss.large.icon]
@@ -3096,12 +3102,13 @@ so no conversions are needed.</p>
       [:a {:href &quot;/&quot;} &quot;Marc-Andr\u00E9 Goyette&quot;]]]
     (map (partial build-menu-item (first menu-items)) menu-items)]])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- footer []
-  [:div.footer.ui.segment.secondary
-   [:div &quot;Copyright \u00A9 Marc-Andr\u00E9 Goyette&quot;
-    [:div.right
-     &quot;Built with Clojure, Stasis and Semantic UI (&quot;
-     [:a {:href &quot;/source&quot;} &quot;Source&quot;]
-     &quot;)&quot;]]])</pre></td></tr><tr><td class="docs">
+  [:div.footer
+   [:div.ui.segment.secondary
+    [:div &quot;Copyright \u00A9 Marc-Andr\u00E9 Goyette&quot;
+     [:div.right
+      &quot;Built with Clojure, Stasis and Semantic UI (&quot;
+      [:a {:href &quot;/source&quot;} &quot;Source code&quot;]
+      &quot;)&quot;]]]])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- post-grid []
   [:div.ui.page.stackable.grid
    [:div.one.wide.column]
